# Ultrasom-CSM30

./: .gitignore  Eigen.txt  README.md  cgnr.cpp  cgnr.py  client.py  openCV.md  server.py  stb_image_write.md  testeModels.cpp  todo.md
.github/: README.md  copilot-instructions.md
Dados de testes para o modelo 2/: H2-Info.txt
cgnr-project/: CMakeLists.txt  README.md
cgnr-project/src/: cgnr  cgnr.cpp  client  client.cpp  server  server.cpp
cgnr-project/src/output/: cgnr  reconstructed_image.csv
data/model1/: H1-Info.txt
src/: CMakeLists.txt  cgnr.cpp  client  client.cpp  desempenho.txt  relatorio_imagens.txt  server  server.cpp
src/client_files/: relatorio_desempenho.txt  relatorio_imagens.txt
src/output/: cgnr
src/server_files/: images.csv  server_performance_report.csv
src/utils/: control.cpp  desempenho.cpp  modelos.cpp  readData.cpp  relatorio.cpp
testes_python/: memoria.py  saturationTest.py  testeModels.py  testes.py
